# postman-vs-pytest

./: README.md  pyproject.toml
app/: trurls_machine.py
tests/CRUD/: test_crud_separated_tests.py
tests/parametrize_with_users/: test_param_with_users.py
tests/setup_teardown_fixtures/: test_autouse.py  test_fixture.py  test_fixture_reorder.py  test_indirect.py
tests/simplest/: test_two_plus_two.py
