[tool.poetry]
name = "postman-vs-pytest"
version = "0.1.0"
description = "Bunch of tests on pytest for my article"
authors = ["Nikita Belkovskii"]
license = "GNU General Public License v3.0"
readme = "README.md"
packages = [{include = "postman_vs_pytest"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"
pydantic = "^2.1.1"
pytest-pycharm = "^0.7.0"
requests = "^2.31.0"
names = "^0.3.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
